--- a/part4/add_review.html
+++ b/part4/add_review.html
@@ -1,25 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Review</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <header>
+        <a href="index.html">
+            <img src="images/logo.png" class="logo">
+        </a>
+        <nav>
+            <a href="index.html" id="index-link" class="index-button">Home</a>
+            <a href="login.html" id="login-link" class="login-button">Login</a>
+        </nav>
+    </header>
+
     <main>
         <!-- Add something to idfentify the place you're reviewing -->
         <form id="review-form">
             <h2>Add a Review</h2>
+
+            <label for="username">Your Name:</label>
+            <input type="text" id="username" name="username" required>
+
             <label for="review">Your Review:</label>
             <textarea id="review" name="review" required></textarea>
+
             <label for="rating">Rating:</label>
             <select id="rating" name="rating" required>
                 <!-- Options for rating -->
+                <option value="5">★★★★★</option>
+                <option value="4">★★★★☆</option>
+                <option value="3">★★★☆☆</option>
+                <option value="2">★★☆☆☆</option>
+                <option value="1">★☆☆☆☆</option>
             </select>
+
+            <label for="comment">Comment:</label>
+            <textarea id="comment" required></textarea>
+
             <button type="submit">Submit Review</button>
         </form>
     </main>
+
+    <footer>
+        <p>
+            © 2025 - all rights reserved.
+        </p>
+    </footer>
+
     <script src="scripts.js"></script>
 </body>
+
 </html>
