--- a/part4/index.html
+++ b/part4/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Places</title>
+    <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
+        <a href="index.html">
+            <img src="images/logo.png" class="logo">
+        </a>
         <nav>
-            <a href="login.html" id="login-link">Login</a>
+            <a href="index.html" id="index-link" class="index-button">Home</a>
+            <a href="login.html" id="login-link" class="login-button">Login</a>
         </nav>
     </header>
+
     <main>
         <section id="filter">
             <label for="price-filter">Max Price:</label>
@@ -21,8 +29,35 @@
         </section>
         <section id="places-list">
             <!-- List of places will be populated dynamically -->
+            <ul>
+                <li>
+                    <article class="place-card">
+                        <h2>Name of place 1</h2>
+                        <p>Price per night: 35€</p>
+                        <p>
+                            <a href="place.html" class="details-button">View Details</a>
+                        </p>
+                    </article>
+                </li>
+
+                <li>
+                    <article class="place-card">
+                        <h2>Name of place 2</h2>
+                        <p>Price per night: 70€</p>
+                        <a href="place.html" class="details-button">View Details</a>
+                    </article>
+                </li>
+            </ul>
         </section>
     </main>
+
+    <footer>
+        <p>
+            © 2025 - all rights reserved.
+        </p>
+    </footer>
+
     <script src="scripts.js"></script>
 </body>
+
 </html>
