--- a/part4/place.html
+++ b/part4/place.html
@@ -1,29 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Place Details</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <header>
+        <a href="index.html">
+            <img src="images/logo.png" class="logo">
+        </a>
+        <nav>
+            <a href="index.html" id="index-link" class="index-button">Home</a>
+            <a href="login.html" id="login-link" class="login-button">Login</a>
+        </nav>
+    </header>
+
     <main>
-        <section id="place-details">
+
+        <section id="place-details" class="place-details">
             <!-- Place details will be populated dynamically -->
+            <article class="place-info">
+                <h2>Name of place</h2>
+                <p>Host : </p>
+                <p>Price per night : €</p>
+                <p>Description : </p>
+                <p>Amenities : </p>
+            </article>
         </section>
+
         <section id="reviews">
             <!-- Reviews will be populated dynamically -->
+            <h2>Reviews</h2>
+            <article class="review-card">
+                <h3>Name of reviewer</h3>
+                <p>Review : </p>
+                <p>Rating: stars</p>
+            </article>
         </section>
+
         <section id="add-review">
             <h2>Add a Review</h2>
+
             <form id="review-form">
                 <label for="review-text">Review:</label>
                 <textarea id="review-text" name="review-text" required></textarea>
-                
+                <label for="rating">Rating:</label>
+                <select id="rating" name="rating" required>
+                    <!-- Options for rating -->
+                    <option value="5">★★★★★</option>
+                    <option value="4">★★★★☆</option>
+                    <option value="3">★★★☆☆</option>
+                    <option value="2">★★☆☆☆</option>
+                    <option value="1">★☆☆☆☆</option>
+                </select>
                 <button type="submit">Submit</button>
             </form>
+
         </section>
+
     </main>
+
+    <footer>
+        <p>
+            © 2025 - all rights reserved.
+        </p>
+    </footer>
+
     <script src="scripts.js"></script>
 </body>
+
 </html>
