--- a/part4/index.html
+++ b/part4/index.html
@@ -47,6 +47,30 @@
                         <a href="place.html" class="details-button">View Details</a>
                     </article>
                 </li>
+
+                <li>
+                    <article class="place-card">
+                        <h2>Name of place 3</h2>
+                        <p>Price per night: 70€</p>
+                        <a href="place.html" class="details-button">View Details</a>
+                    </article>
+                </li>
+
+                <li>
+                    <article class="place-card">
+                        <h2>Name of place 4</h2>
+                        <p>Price per night: 70€</p>
+                        <a href="place.html" class="details-button">View Details</a>
+                    </article>
+                </li>
+
+                <li>
+                    <article class="place-card">
+                        <h2>Name of place 5</h2>
+                        <p>Price per night: 70€</p>
+                        <a href="place.html" class="details-button">View Details</a>
+                    </article>
+                </li>
             </ul>
         </section>
     </main>
